// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`All Demos Cheat-Code Demo should run the test 1`] = `
"Press a key five times in a second to get a star (✨🌟✨), or 'x' to eXit:

🕛 
🕐 
🕑 
🕒 
🕓 
🕕  🕕  🕕  🕕  🕕   ✨🌟✨!
🕖 "
`;

exports[`All Demos Fruit Concurrency Demo should abort in-flight handlers in cutoff mode 1`] = `
"Press a number to download a fruit (higher numbers take longer). 
  1️⃣ :🍓  2️⃣ :🍌  3️⃣ :🍉  4️⃣ :🍍  5️⃣ :🍏  6️⃣ :🍓  7️⃣ :🥝  8️⃣ :🍒  9️⃣ :🥑  
      
  1️⃣  🍓  ✅
  2️⃣  🍌  🍌  ✅
  3️⃣  🍉  🍉  🍉  ✅
  9️⃣  🥑  🥑  🥑  🥑  🥑   4️⃣  🍍  🍍  🍍  🍍  ✅
  5️⃣  🍏  🍏  🍏  🍏  🍏  ✅
"
`;

exports[`All Demos Fruit Concurrency Demo should mute/drop new handlers in mute mode 1`] = `
"Press a number to download a fruit (higher numbers take longer). 
  1️⃣ :🍓  2️⃣ :🍌  3️⃣ :🍉  4️⃣ :🍍  5️⃣ :🍏  6️⃣ :🍓  7️⃣ :🥝  8️⃣ :🍒  9️⃣ :🥑  
      
  1️⃣  🍓  ✅
  2️⃣  🍌  🍌  ✅
  3️⃣  🍉  🍉  🍉  ✅
  9️⃣  🥑  🥑  🥑  🥑  🥑   4️⃣  🥑  🥑  🥑  🥑  ✅
  5️⃣  🍏  🍏  🍏  🍏  🍏  ✅
"
`;

exports[`All Demos Fruit Concurrency Demo should run in parallel 1`] = `
"Press a number to download a fruit (higher numbers take longer). 
  1️⃣ :🍓  2️⃣ :🍌  3️⃣ :🍉  4️⃣ :🍍  5️⃣ :🍏  6️⃣ :🍓  7️⃣ :🥝  8️⃣ :🍒  9️⃣ :🥑  
      
  1️⃣  🍓  ✅
  2️⃣  🍌  🍌  ✅
  3️⃣  🍉  🍉  🍉  ✅
  9️⃣  🥑  🥑  🥑  🥑  🥑   4️⃣  🥑  🍍  🥑  🍍  🥑  🍍  🥑  ✅
 🍍  ✅
  5️⃣  🍏  🍏  🍏  🍏  🍏  ✅
"
`;

exports[`All Demos Fruit Concurrency Demo should run in series 1`] = `
"Press a number to download a fruit (higher numbers take longer). 
  1️⃣ :🍓  2️⃣ :🍌  3️⃣ :🍉  4️⃣ :🍍  5️⃣ :🍏  6️⃣ :🍓  7️⃣ :🥝  8️⃣ :🍒  9️⃣ :🥑  
      
  1️⃣  🍓  ✅
  2️⃣  🍌  🍌  ✅
  3️⃣  🍉  🍉  🍉  ✅
  9️⃣  🥑  🥑  🥑  🥑  🥑   4️⃣  🥑  🥑  🥑  🥑  ✅
 🍍   5️⃣  🍍  🍍  🍍  ✅
 🍏  🍏  🍏  🍏  🍏  ✅
"
`;
